--- a/project.html
+++ b/project.html
@@ -9,6 +9,6 @@
    <h1>Projects</h1>
    <h3>Project List</h3>
    <a href="/">&lt;- Back to home</a>
-   <a href="registration">Registration Link</a>
+   <a href="/registration.html">Registration Link</a>
 </body>
 </html>
